# FaturaPRO-cpp

./: .gitignore  CMakeLists.txt  README.md
migrations/: 001_criar_empresas.sql  002_criar_clientes.sql  003_criar_produtos.sql  004_criar_faturas.sql  005_criar_linhas_fatura.sql  006_criar_utilizadores.sql
src/: data_hora.h  main.cpp  testeSQL.cpp
src/auth/: Autenticador.h
src/controller/: ClienteController.h  FaturaController.h  ProdutoController.h  RelatorioController.h
src/domain/: Cliente.h  Fatura.h  LinhaFatura.h  Produto.h  Relatorio.h  Utilizador.h
src/factory/: FaturaBuilder.h  FaturaFactory.h
src/repository/: ClienteRepository.h  FaturaRepository.h  ProdutoRepository.h  RelatorioRepository.h  UtilizadorRepository.h
src/service/: ClienteService.h  FaturaService.h  ProdutoService.h  RelatorioService.h
src/util/: Database.hpp  GestorMigracoes.hpp  Statement.hpp
tests/: test_cliente_service.cpp
